--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -9,7 +9,7 @@
         <h1>Julkalendern</h1>
 
         <div style="width:100%;height:500px;">
-            <img id="b0" src="RedX.jpg" alt="" onclick="">
+            <img id="b0" src="RedX.jpg" alt="" onclick="hide1()">
             <div onclick="pressed1()">1
                 <img id="b1" src="brown.png" alt="">
             </div>
@@ -89,6 +89,9 @@
         </script>
 
         <script>
+            function hide1(){
+                document.getElementById("b0").style.display = 'none';
+            }
             function pressed1(){
                 var today = document.getElementById("current_date").value;
                 if(today === 06/10/22){
