--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Julkalendern</h1>
 
-        <div style="width:100%;height:500px;">
+        <div id="D12">
             <img id="b0" src="RedX.jpg" alt="" onclick="hide1()">
             <div onclick="pressed1()">1
                 <img id="b1" src="brown.png" alt="">
