--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -94,7 +94,7 @@
                 document.getElementById("b0").style.display = 'none';
             }
             function pressed1(){
-                var today = document.getElementById("current_date").value;
+                //var today = document.getElementById("current_date").value;
                 if(year== 2022 && month == 9 && day == 11){
                     document.getElementById("b1").src = "tomteluva.png";
                 }else{
@@ -103,8 +103,8 @@
                 }    
             }   
             function pressed2(){
-                var today = document.getElementById("current_date").value;
-                if(today === 02/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 2){
                     document.getElementById("b2").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -112,8 +112,8 @@
                 }
             }  
             function pressed3(){
-                var today = document.getElementById("current_date").value;
-                if(today === 03/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 3){
                     document.getElementById("b3").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -121,8 +121,8 @@
                 }
             }  
             function pressed4(){
-                var today = document.getElementById("current_date").value;
-                if(today === 04/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 4){
                     document.getElementById("b4").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -130,8 +130,8 @@
                 }
             }  
             function pressed5(){
-                var today = document.getElementById("current_date").value;
-                if(today === 05/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 5){
                     document.getElementById("b5").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -139,8 +139,8 @@
                 }
             }  
             function pressed6(){
-                var today = document.getElementById("current_date").value;
-                if(today === 06/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 6){
                     document.getElementById("b6").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -148,8 +148,8 @@
                 }
             }  
             function pressed7(){
-                var today = document.getElementById("current_date").value;
-                if(today === 07/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 7){
                     document.getElementById("b7").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -157,8 +157,8 @@
                 }
             }
             function pressed8(){
-                var today = document.getElementById("current_date").value;
-                if(today === 08/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 8){
                     document.getElementById("b8").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -166,8 +166,8 @@
                 }
             }  
             function pressed9(){
-                var today = document.getElementById("current_date").value;
-                if(today === 09/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 9){
                     document.getElementById("b9").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -175,8 +175,8 @@
                 }
             }  
             function pressed10(){
-                var today = document.getElementById("current_date").value;
-                if(today === 10/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 10){
                     document.getElementById("b10").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -184,8 +184,8 @@
                 }
             }  
             function pressed11(){
-                var today = document.getElementById("current_date").value;
-                if(today === 11/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 11){
                     document.getElementById("b11").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -193,8 +193,8 @@
                 }
             }  
             function pressed12(){
-                var today = document.getElementById("current_date").value;
-                if(today === 12/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 12){
                     document.getElementById("b12").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -202,8 +202,8 @@
                 }
             }  
             function pressed13(){
-                var today = document.getElementById("current_date").value;
-                if(today === 13/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 13){
                     document.getElementById("b13").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -211,8 +211,8 @@
                 }
             }  
             function pressed14(){
-                var today = document.getElementById("current_date").value;
-                if(today === 14/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 14){
                     document.getElementById("b14").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -220,8 +220,8 @@
                 }
             }  
             function pressed15(){
-                var today = document.getElementById("current_date").value;
-                if(today === 15/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 15){
                     document.getElementById("b15").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -229,8 +229,8 @@
                 }
             }  
             function pressed16(){
-                var today = document.getElementById("current_date").value;
-                if(today === 16/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 16){
                     document.getElementById("b16").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -238,8 +238,8 @@
                 }
             }  
             function pressed17(){
-                var today = document.getElementById("current_date").value;
-                if(today === 17/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 17){
                     document.getElementById("b17").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -247,8 +247,8 @@
                 }
             }  
             function pressed18(){
-                var today = document.getElementById("current_date").value;
-                if(today === 18/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 18){
                     document.getElementById("b18").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -256,8 +256,8 @@
                 }
             }  
             function pressed19(){
-                var today = document.getElementById("current_date").value;
-                if(today === 19/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 19){
                     document.getElementById("b19").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -265,8 +265,8 @@
                 }
             }  
             function pressed20(){
-                var today = document.getElementById("current_date").value;
-                if(today === 20/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 20){
                     document.getElementById("b20").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -274,8 +274,8 @@
                 }
             }  
             function pressed21(){
-                var today = document.getElementById("current_date").value;
-                if(today === 21/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 21){
                     document.getElementById("b21").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -283,8 +283,8 @@
                 }                
             }  
             function pressed22(){
-                var today = document.getElementById("current_date").value;
-                if(today === 22/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 22){
                     document.getElementById("b22").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -292,8 +292,8 @@
                 }
             }  
             function pressed23(){
-                var today = document.getElementById("current_date").value;
-                if(today === 23/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 23){
                     document.getElementById("b23").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
@@ -301,8 +301,8 @@
                 }
             }  
             function pressed24(){
-                var today = document.getElementById("current_date").value;
-                if(today === 24/12/22){
+                //var today = document.getElementById("current_date").value;
+                if(year== 2022 && month == 11 && day == 24){
                     document.getElementById("b24").src = "tomteluva.png";
                 }else{
                     document.getElementById("b0").style.display = 'block';
